# uaDASH

./: .gitmodules  README.md
linux/: Makefile  can_lib.h  config.h  display_driver.cpp  display_driver.h  events.cpp  lv_conf.h  main.c  updaters.cpp  updaters.h
linux/export/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h
linux/export/fonts/: ui_font_FontIndicator.c  ui_font_FontIndicatorLabel.c  ui_font_FontLabel.c  ui_font_FontRPM.c  ui_font_FontSpeed.c
linux/export/screens/: ui_benchScreen.c  ui_benchScreen.h  ui_mainScreen.c  ui_mainScreen.h  ui_settingsScreen.c  ui_settingsScreen.h
